--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>net.pwall.json</groupId>
   <artifactId>json-co-functions</artifactId>
-  <version>1.5</version>
+  <version>1.6</version>
   <name>Non-blocking functions for JSON formatting</name>
   <description>Non-blocking versions of functions for JSON formatting</description>
   <packaging>jar</packaging>
@@ -14,7 +14,7 @@
   <parent>
     <groupId>net.pwall.maven</groupId>
     <artifactId>maven-kotlin</artifactId>
-    <version>7.0</version>
+    <version>8.0</version>
   </parent>
 
   <properties>
@@ -61,11 +61,17 @@
     <dependency>
       <groupId>net.pwall.util</groupId>
       <artifactId>co-int-output</artifactId>
-      <version>2.6</version>
+      <version>2.7</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.kstuff</groupId>
+      <artifactId>should-test</artifactId>
+      <version>4.4</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -75,7 +81,6 @@
     <dependency>
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-coroutines-core</artifactId>
-      <version>1.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
