--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,17 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.pwall.json</groupId>
   <artifactId>json-co-functions</artifactId>
-  <version>1.6</version>
+  <version>2.0</version>
   <name>Non-blocking functions for JSON formatting</name>
   <description>Non-blocking versions of functions for JSON formatting</description>
   <packaging>jar</packaging>
   <url>https://github.com/pwall567/json-co-functions</url>
 
   <parent>
-    <groupId>net.pwall.maven</groupId>
-    <artifactId>maven-kotlin</artifactId>
-    <version>8.0</version>
+    <groupId>io.kstuff</groupId>
+    <artifactId>kstuff-maven</artifactId>
+    <version>2.0</version>
   </parent>
 
   <properties>
@@ -59,9 +58,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.pwall.util</groupId>
+      <groupId>io.kstuff</groupId>
       <artifactId>co-int-output</artifactId>
-      <version>2.7</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
